Closed
Bug 1496245
Opened 7 years ago
Closed 7 years ago
RTCPeerConnection createOffer generates malformed sdp after rollback
Categories
(Core :: WebRTC: Signaling, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla65
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox62 | --- | wontfix |
| firefox63 | --- | wontfix |
| firefox64 | --- | wontfix |
| firefox65 | --- | fixed |
People
(Reporter: mmalavalli, Assigned: bwc)
References
Details
(Keywords: regression)
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/69.0.3497.100 Safari/537.36
Steps to reproduce:
Run https://jsfiddle.net/03ykx5q1/ in a Firefox tab.
See console for results.
Actual results:
The generated offer is malformed due to the presence of this media section:
m=audio 0 DTLS/SCTP 0
c=IN IP4 0.0.0.0
a=inactive
a=mid:application0
a=rtpmap:0 PCMU/8000
Expected results:
The generated offer should not be malformed.
Updated•7 years ago
|
Status: UNCONFIRMED → NEW
Component: Untriaged → WebRTC: Signaling
Ever confirmed: true
Priority: -- → P3
Product: Firefox → Core
Updated•7 years ago
|
status-firefox62:
--- → affected
status-firefox64:
--- → affected
Comment 1•7 years ago
|
||
This looks pretty messed up in the sense that it says m=audio, but DTLS/SCTP and mid:application0.
Byron, could you please have a quick initial look to check how bad this is?
Flags: needinfo?(docfaraday)
| Assignee | ||
Comment 2•7 years ago
|
||
Huh, weird. I'll look into it.
Assignee: nobody → docfaraday
Flags: needinfo?(docfaraday)
| Assignee | ||
Comment 3•7 years ago
|
||
| Assignee | ||
Comment 4•7 years ago
|
||
| Assignee | ||
Comment 5•7 years ago
|
||
| Assignee | ||
Comment 6•7 years ago
|
||
| Assignee | ||
Comment 7•7 years ago
|
||
| Assignee | ||
Comment 8•7 years ago
|
||
Bug 1496245 - Part 1: Allow SRD(offer) to stomp un-negotiated level mappings on our transceivers.
Bug 1496245 - Part 2: Don't create extra datachannel transceivers, just reuse (and possibly re-enable) the one we have.
Updated•7 years ago
|
Attachment #9015985 -
Attachment description: Bug 1496245 - Part 0: web-platform-test for rollback followed by SRD with different media type. → Bug 1496245: Fix bugs where transceivers could be associated with m-sections of another type.
Pushed by bcampen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d7641a700ff6
Fix bugs where transceivers could be associated with m-sections of another type. r=mjf,jib
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/13723 for changes under testing/web-platform/tests
Upstream web-platform-tests status checks passed, PR will merge once commit reaches central.
Comment 12•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox65:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Upstream PR merged
Comment 14•7 years ago
|
||
Is this something we should consider for Beta uplift or can it ride the trains?
status-firefox63:
--- → wontfix
status-firefox-esr60:
--- → unaffected
Flags: needinfo?(docfaraday)
Flags: in-testsuite+
Keywords: regression
| Assignee | ||
Comment 15•7 years ago
|
||
I think we can let this ride the trains. It is a pretty rare corner case.
Flags: needinfo?(docfaraday)
Updated•7 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•