Bug 1496245: Fix bugs where transceivers could be associated with m-sections of another type. r=mjf,jib

Bug 1496245 - Part 0: web-platform-test for rollback followed by SRD with different media type.

Bug 1496245 - Part 1: Allow SRD(offer) to stomp un-negotiated level mappings on our transceivers.

Bug 1496245 - Part 2: Don't create extra datachannel transceivers, just reuse (and possibly re-enable) the one we have.

Differential Revision: https://phabricator.services.mozilla.com/D8259